--- a/snippets/cart-drawer.liquid
+++ b/snippets/cart-drawer.liquid
@@ -1,13 +1,5 @@
-<div class="cart-drawer" id="cart-drawer">
-  <div class="cart-drawer__header">
-    <h2 class="cart-drawer__title">Your Cart (<span class="cart-count">{{ cart.item_count }}</span>)</h2>
-    <button class="cart-drawer__close" aria-label="Close cart">×</button>
-  </div>
-  <div class="cart-drawer__body" id="cart-drawer-body">
-    <!-- Cart items will be loaded via JavaScript -->
-  </div>
-  <div class="cart-drawer__footer" id="cart-drawer-footer">
-    <!-- Cart summary will be loaded via JavaScript -->
-  </div>
+<div id="cartDrawer" class="cart-drawer">
+  <h3>Your Cart</h3>
+  <div id="cartItems"></div>
+  <a href="/checkout" class="btn">Checkout</a>
 </div>
-<div class="cart-drawer__overlay"></div>
