--- a/sections/daily-deals.liquid
+++ b/sections/daily-deals.liquid
@@ -97,6 +97,18 @@
                 <span class="dailydeals__price--current">{{ product.price | money }}</span>
               </div>
 
+              {%- comment -%} Star Rating {%- endcomment -%}
+              <div class="dailydeals__rating">
+                <div class="dailydeals__stars">
+                  {% for i in (1..5) %}
+                    <svg class="dailydeals__star" viewBox="0 0 24 24">
+                      <path d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"/>
+                    </svg>
+                  {% endfor %}
+                </div>
+                <span class="dailydeals__reviews">228</span>
+              </div>
+
               <form method="post" action="/cart/add" class="dailydeals__form">
                 <input type="hidden" name="id" value="{{ product.selected_or_first_available_variant.id }}">
 
