--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -26,6 +26,7 @@
     {%- render 'scripts' -%}
     {%- render 'theme-styles-variables' -%}
     {%- render 'color-schemes' -%}
+    {%- render 'collection-modern-assets' -%}
 
     {% if request.design_mode %}
       {%- render 'theme-editor' -%}
